Ud.3 ej.8 modificacion

--- a/U03PFlexBox/Ejercicio_8.css
+++ b/U03PFlexBox/Ejercicio_8.css
@@ -6,6 +6,7 @@
 .tarjeta {
     display: flex;
     flex-direction: column;
+    width: 350px;
     font-family: sans-serif;
     box-shadow: 5px 5px 3px lightgreen;
 }
